--- a/FINAL TASK/CS/finalTask.css
+++ b/FINAL TASK/CS/finalTask.css
@@ -23,14 +23,14 @@ body {
     height: 50px;
 }
 .nav-link:hover {
-    color: rgb(3, 70, 3);
+    color: rgb(38, 51, 59);
 }
 .navbar-collapse {
     justify-content: flex-end;
 }
 
 .carousel {
-    max-height: 500px;
+    max-height: 75vh;
     overflow: hidden;
     margin-bottom: 15px;
 }
@@ -38,13 +38,24 @@ body {
 .carousel .carousel-indicators button {
     border-radius: 100%;
     width: 10px;
-    height: 10px;
-    
+    height: 10px;   
 }
+
 .carousel-inner {
     padding: 20px;
 width: 100%;
 
+}
+ .carousel-control-prev-icon {
+    width: 30px;
+    height: 30px;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+}
+ 
+.carousel-control-next-icon {
+    width: 30px;
+    height: 30px;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
 }
 
 .w-100 {
@@ -124,19 +135,104 @@ width: 100%;
  
 .batmanText {
     color: rgb(27, 28, 29);
-    font-weight: bolder;
+    font-weight: bold;
+    background-color: rgb(163, 167, 167);
 }
 .headingFirst {
     color: rgb(58, 69, 83);
+    font: italic;
 }
-a:link {
+a {
     color: inherit;
     text-decoration: none;
-   
 
   }
   a:hover {
     color:rgb(27, 28, 29);
     font-weight: bold;
   }
-  
+   .container-chat {
+       height: 60vh;
+       overflow-y: scroll;
+   }
+   .textarea-chat {
+       width: 100%;
+   }
+   .bold {
+       font-weight: bold;
+   }
+   .gallery {
+       height: 150px;
+   }
+   .tabs {
+       display: flex;
+       flex-wrap: wrap;
+       max-width:500px;
+       margin: 50px auto;
+       padding: 25px;
+   }
+   .tabs input[type="radio"] {
+       display: none;
+   }
+   .tabs label {
+       padding: 25px;
+       background:rgb(58, 69, 83);
+       font-weight: bold;
+   }
+
+   .tabs .tab {
+       width: 100%;
+       padding: 20px;
+       background: skyblue;
+       order: 1;
+       display: none;
+   }
+   .tabs .tab h2 {
+       font-size: 3em;
+   }
+   .tabs input[type='radio']:checked + label + .tab {
+       display: block;
+   }
+   .tabs input[type="radio"]:checked + label {
+       background: slateblue;
+   }
+   .rounded-border {
+    border-radius: 50px;
+    border: 2px solid rgb(134, 155, 161);
+    padding: 5px;
+  }
+
+  .form-control .border .border-danger {
+     border: solid 2px;
+ }
+.form-control {
+    background: #f2f6e9;
+    border: none;
+    width: 60vh;
+    
+}
+
+#agreeOnTerms {
+    font-size: 0.9em;
+}
+
+.form-check {
+    color: rgb(25, 28, 34);
+}
+
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.map-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+.card-title {
+    font-size: 1rem;
+}
